--- a/app/static/less/theme_components/features-small.less
+++ b/app/static/less/theme_components/features-small.less
@@ -27,7 +27,7 @@
 	h4{
 		margin-bottom: 0.342105263157895em;
 		+ p{
-			max-width: @base-line-height*12;
+			//max-width: @base-line-height*12;
 		}
 	}
 	i+h5{
